adding sidebar style and toggle behavior.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <div class="nav-items">
                 <ul>
-                    <li>🚁</li>
+                    <li class="btn sidebar-toggle">🚁</li>
                     <li class="active">🚁 <span>Dashboard</span></li>
                     <li>🚁 <span>Collections</span></li>
                 </ul>
@@ -27,8 +27,15 @@
             </div>
         </nav>
     </header>
-    <main class="container w-md">
-        <div class="sidebar hidden">Sidebar</div>
+    <main class="container">
+        <div class="sidebar">
+            <ul>
+                <li>😍 <span>Design</span></li>
+                <li>😍 <span>Design</span></li>
+                <li>😍 <span>Design</span></li>
+                <li>😍 <span>Design</span></li>
+            </ul>
+        </div>
         <div class="body">Body</div>
     </main>
 </body>
