setting up sidebar position and and behavior

--- a/index.html
+++ b/index.html
@@ -12,32 +12,29 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="nav-items">
-                <ul>
-                    <li class="btn sidebar-toggle">🚁</li>
-                    <li class="active">🚁 <span>Dashboard</span></li>
-                    <li>🚁 <span>Collections</span></li>
-                </ul>
-            </div>
-            <div class="nav-items">
-                <ul>
-                    <li>➕</li>
-                    <li class="avatar">👨‍🦱</li>
-                </ul>
-            </div>
+            <ul class="nav-items">
+                <li class="nav-item sidebar-toggle">🚁</li>
+                <li class="nav-item active">🚁 <span>Dashboard</span></li>
+                <li class="nav-item">🚁 <span>Collections</span></li>
+            </ul>
+            <ul class="nav-items">
+                <li class="nav-item">➕</li>
+                <li class="nav-itemavatar">👨‍🦱</li>
+            </ul>
         </nav>
     </header>
     <main class="container">
-        <div class="sidebar">
-            <ul>
-                <li>😍 <span>Design</span></li>
-                <li>😍 <span>Design</span></li>
-                <li>😍 <span>Design</span></li>
-                <li>😍 <span>Design</span></li>
-            </ul>
-        </div>
-        <div class="body">Body</div>
+        <div class="body">There is Body of Our projet</div>
     </main>
+
+    <div class="sidebar">
+        <ul class="list">
+            <li class="list-item">😍 <span>Design</span></li>
+            <li class="list-item active">😍 <span>Design</span></li>
+            <li class="list-item">😍 <span>Design</span></li>
+            <li class="list-item">😍 <span>Design</span></li>
+        </ul>
+    </div>
 </body>
 <script src="./js/main.js" defer></script>
 
