creating Card Component and adding toggle behavior

--- a/index.html
+++ b/index.html
@@ -23,8 +23,50 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
-        <div class="body">There is Body of Our projet</div>
+
+    <main class="container w-lg">
+        <div class="content w-lg">
+            <h4>Tasks - 6</h4>
+            <div class="card">
+                <div class="card-header">
+                    <div>
+                        <input type="checkbox" name="checkbox">
+                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                    </div>
+                    <span class="card-action-btn">🔽</span>
+                </div>
+                <div class="card-body">
+                    <span class="date">📅 Wednesday, Dec 10</span>
+                </div>
+                <div class="card-footer"></div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <div>
+                        <input type="checkbox" name="checkbox">
+                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                    </div>
+                    <span class="card-action-btn">🔽</span>
+                </div>
+                <div class="card-body hidden">
+                    <span class="date">📅 Wednesday, Dec 10</span>
+                </div>
+                <div class="card-footer"></div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <div>
+                        <input type="checkbox" name="checkbox">
+                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                    </div>
+                    <span class="card-action-btn">🔽</span>
+                </div>
+                <div class="card-body">
+                    <span class="date">📅 Wednesday, Dec 10</span>
+                </div>
+                <div class="card-footer"></div>
+            </div>
+        </div>
     </main>
 
     <div class="sidebar">
@@ -36,6 +78,6 @@
         </ul>
     </div>
 </body>
-<script src="./js/main.js" defer></script>
+<script src="./js/main.js"></script>
 
 </html>
