--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
     <title>Todo App</title>
 </head>
 
@@ -24,8 +26,8 @@
         </nav>
     </header>
 
-    <main class="container w-lg">
-        <div class="content w-lg">
+    <main class="container">
+        <div class="content">
             <h4>Tasks - 6</h4>
             <div class="card">
                 <div class="card-header">
@@ -69,12 +71,19 @@
         </div>
     </main>
 
-    <div class="sidebar">
+    <div class="sidebar fade">
+        <div class="sidebar-title">📁 Collections</div>
         <ul class="list">
-            <li class="list-item">😍 <span>Design</span></li>
-            <li class="list-item active">😍 <span>Design</span></li>
-            <li class="list-item">😍 <span>Design</span></li>
-            <li class="list-item">😍 <span>Design</span></li>
+            <li class="list-item"><span class="list-icon">✔️</span>Design</li>
+            <li class="list-item active"><span class="list-icon">💪</span>WorkOut</li>
+            <li class="list-item"><span class="list-icon">🏫</span>School</li>
+            <li class="list-item"><span class="list-icon">🏚️</span>University</li>
+        </ul>
+
+        <div class="sidebar-title">⚒️ Settings</div>
+        <ul class="list">
+            <li class="list-item"><i class="fa fa-home"></i> <span>Setting</span></li>
+            <li class="list-item active">😍 <span>Mode</span></li>
         </ul>
     </div>
 </body>
