--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Todo App</title>
 </head>
 
@@ -15,13 +14,13 @@
     <header class="header">
         <nav class="nav">
             <ul class="nav-items">
-                <li class="nav-item sidebar-toggle">🚁</li>
-                <li class="nav-item active">🚁 <span>Dashboard</span></li>
-                <li class="nav-item">🚁 <span>Collections</span></li>
+                <li class="nav-item sidebar-toggle"><i class="fa fa-bars"></i></li>
+                <li class="nav-item active"><i class="fa fa-th"></i> <span>Dashboard</span></li>
+                <li class="nav-item"><i class="fa fa-tasks" aria-hidden="true"></i> <span>Collections</span></li>
             </ul>
             <ul class="nav-items">
-                <li class="nav-item">➕</li>
-                <li class="nav-itemavatar">👨‍🦱</li>
+                <li class="nav-item"><i class="fa fa-plus"></i></li>
+                <li class="nav-item avatar"><i class="fa fa-user-circle"></i></li>
             </ul>
         </nav>
     </header>
@@ -35,10 +34,10 @@
                         <input type="checkbox" name="checkbox">
                         <h4 class="card-title">Lorem ipsum dolor sit</h4>
                     </div>
-                    <span class="card-action-btn">🔽</span>
+                    <span class="card-action-btn"><i class="fa fa-angle-up"></i></span>
                 </div>
                 <div class="card-body">
-                    <span class="date">📅 Wednesday, Dec 10</span>
+                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
                 </div>
                 <div class="card-footer"></div>
             </div>
@@ -48,10 +47,10 @@
                         <input type="checkbox" name="checkbox">
                         <h4 class="card-title">Lorem ipsum dolor sit</h4>
                     </div>
-                    <span class="card-action-btn">🔽</span>
+                    <span class="card-action-btn"><i class="fa fa-angle-down"></i></span>
                 </div>
                 <div class="card-body hidden">
-                    <span class="date">📅 Wednesday, Dec 10</span>
+                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
                 </div>
                 <div class="card-footer"></div>
             </div>
@@ -61,10 +60,10 @@
                         <input type="checkbox" name="checkbox">
                         <h4 class="card-title">Lorem ipsum dolor sit</h4>
                     </div>
-                    <span class="card-action-btn">🔽</span>
+                    <span class="card-action-btn"><i class="fa fa-angle-up"></i></span>
                 </div>
                 <div class="card-body">
-                    <span class="date">📅 Wednesday, Dec 10</span>
+                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
                 </div>
                 <div class="card-footer"></div>
             </div>
@@ -72,18 +71,22 @@
     </main>
 
     <div class="sidebar fade">
-        <div class="sidebar-title">📁 Collections</div>
+        <div class="sidebar-title"><i class="fa fa-tasks" aria-hidden="true"></i> Collections</div>
         <ul class="list">
-            <li class="list-item"><span class="list-icon">✔️</span>Design</li>
-            <li class="list-item active"><span class="list-icon">💪</span>WorkOut</li>
-            <li class="list-item"><span class="list-icon">🏫</span>School</li>
-            <li class="list-item"><span class="list-icon">🏚️</span>University</li>
+            <li class="list-item"><span class="list-icon"><i class="fa fa-circle" aria-hidden="true"></i></span>Design
+            </li>
+            <li class="list-item active"><span class="list-icon"><i class="fa fa-circle"
+                        aria-hidden="true"></i></span>WorkOut</li>
+            <li class="list-item"><span class="list-icon"><i class="fa fa-circle" aria-hidden="true"></i></span>School
+            </li>
+            <li class="list-item"><span class="list-icon"><i class="fa fa-circle"
+                        aria-hidden="true"></i></span>University</li>
         </ul>
 
-        <div class="sidebar-title">⚒️ Settings</div>
+        <div class="sidebar-title"><i class="fa fa-cog"></i> Settings</div>
         <ul class="list">
-            <li class="list-item"><i class="fa fa-home"></i> <span>Setting</span></li>
-            <li class="list-item active">😍 <span>Mode</span></li>
+            <li class="list-item"><span class="list-icon"><i class="fa fa-cog"></i></span>Setting</li>
+            <li class="list-item"><span class="list-icon"><i class="fa fa-adjust"></i></span>Mode</li>
         </ul>
     </div>
 </body>
