--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <nav class="nav">
             <ul class="nav-items">
                 <li class="nav-item sidebar-toggle"><i class="fa fa-bars"></i></li>
-                <li class="nav-item active"><i class="fa fa-th"></i> <span>Dashboard</span></li>
+                <li class="nav-item active btn">
+                    <i class="fa fa-th pink"></i>
+                    <span>Dashboard</span>
+                </li>
                 <li class="nav-item"><i class="fa fa-tasks" aria-hidden="true"></i> <span>Collections</span></li>
             </ul>
             <ul class="nav-items">
-                <li class="nav-item"><i class="fa fa-plus"></i></li>
+                <li class="nav-item"><i class="fa fa-plus pink"></i></li>
                 <li class="nav-item avatar"><i class="fa fa-user-circle"></i></li>
             </ul>
         </nav>
@@ -71,16 +74,27 @@
     </main>
 
     <div class="sidebar fade">
-        <div class="sidebar-title"><i class="fa fa-tasks" aria-hidden="true"></i> Collections</div>
+        <div class="sidebar-title">
+            <i class="fa fa-tasks" aria-hidden="true"></i>
+            Collections
+        </div>
         <ul class="list">
-            <li class="list-item"><span class="list-icon"><i class="fa fa-circle" aria-hidden="true"></i></span>Design
+            <li class="list-item">
+                <span class="list-icon">
+                    <i class="fa fa-circle purple" aria-hidden="true"></i></span>
+                Design
             </li>
-            <li class="list-item active"><span class="list-icon"><i class="fa fa-circle"
-                        aria-hidden="true"></i></span>WorkOut</li>
-            <li class="list-item"><span class="list-icon"><i class="fa fa-circle" aria-hidden="true"></i></span>School
+            <li class="list-item active">
+                <span class="list-icon"><i class="fa fa-circle tomato" aria-hidden="true"></i></span>WorkOut
             </li>
-            <li class="list-item"><span class="list-icon"><i class="fa fa-circle"
-                        aria-hidden="true"></i></span>University</li>
+            <li class="list-item">
+                <a href="#">
+                    <span class="list-icon"><i class="fa fa-circle pink" aria-hidden="true"></i>
+                    </span>School
+                </a>
+            </li>
+            <li class="list-item"><span class="list-icon ">
+                    <i class="fa fa-circle purple" aria-hidden="true"></i></span>University</li>
         </ul>
 
         <div class="sidebar-title"><i class="fa fa-cog"></i> Settings</div>
