--- a/index.html
+++ b/index.html
@@ -13,68 +13,86 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <ul class="nav-items">
-                <li class="nav-item sidebar-toggle"><i class="fa fa-bars"></i></li>
-                <li class="nav-item active btn">
+            <div class="nav-items">
+                <button onclick="sidebarToggle()" class="btn icon-btn btn-md nav-item sidebar-toggle"><i
+                        class="fa fa-bars"></i></button>
+                <a href="#" class="btn btn-md active ">
                     <i class="fa fa-th pink"></i>
                     <span>Dashboard</span>
-                </li>
-                <li class="nav-item"><i class="fa fa-tasks" aria-hidden="true"></i> <span>Collections</span></li>
-            </ul>
-            <ul class="nav-items">
-                <li class="nav-item"><i class="fa fa-plus pink"></i></li>
-                <li class="nav-item avatar"><i class="fa fa-user-circle"></i></li>
-            </ul>
+                </a>
+                <a class="btn btn-md">
+                    <i class="fa fa-tasks" aria-hidden="true"></i>
+                    Collections
+                </a>
+            </div>
+            <div class="nav-items">
+                <button class="btn icon-btn btn-md">
+                    <i class="fa fa-plus pink"></i>
+                </button>
+                <button class="btn icon-btn btn-md avatar">
+                    <i class="fa fa-user-circle"></i>
+                </button>
+            </div>
         </nav>
     </header>
 
     <main class="container">
-        <div class="g-container">
-            <h1 class="g-title">Hey! 🖐️, Welcome Back</h1>
-            <h2 class="g-user">Mr. Alireza Mohseni</h2>
-        </div>
-        <div class="content">
-            <h4>Tasks - 6</h4>
-            <div class="card">
-                <div class="card-header">
-                    <div>
-                        <input type="checkbox" name="checkbox">
-                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
-                    </div>
-                    <span class="card-action-btn"><i class="fa fa-angle-up"></i></span>
-                </div>
-                <div class="card-body">
-                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
-                </div>
-                <div class="card-footer"></div>
+        <section class="content">
+            <div class="content-header">
+                <h2>Dashboard</h2>
+                <button class="btn icon-btn btn-sm">
+                    <i class="fa fa-ellipsis-v"></i>
+                </button>
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <div>
-                        <input type="checkbox" name="checkbox">
-                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
-                    </div>
-                    <span class="card-action-btn"><i class="fa fa-angle-down"></i></span>
-                </div>
-                <div class="card-body hidden">
-                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
-                </div>
-                <div class="card-footer"></div>
+
+            <div class="g-container">
+                <h1 class="g-title">Hey! 🖐️, Welcome Back</h1>
+                <h2 class="g-user">Mr. Alireza Mohseni</h2>
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <div>
-                        <input type="checkbox" name="checkbox">
-                        <h4 class="card-title">Lorem ipsum dolor sit</h4>
+
+            <div class="content-body">
+                <h4>Tasks - 6</h4>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
                     </div>
-                    <span class="card-action-btn"><i class="fa fa-angle-up"></i></span>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
                 </div>
-                <div class="card-body">
-                    <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body hidden">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
                 </div>
-                <div class="card-footer"></div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <div class="sidebar fade">
