make content of project as responsive.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <header class="header">
         <nav class="nav">
             <div class="nav-items">
-                <button onclick="sidebarToggle()" id="sidebar-toggle-btn"
-                    class="btn icon-btn btn-md nav-item sidebar-toggle">
+                <button id="sidebar-toggle-btn" class="btn icon-btn btn-md nav-item sidebar-toggle">
                     <i class="fa fa-bars"></i>
                 </button>
                 <a href="#" class="btn btn-md active desktop-only">
@@ -73,7 +72,7 @@
                             <input type="checkbox" name="checkbox">
                             <h4 class="card-title">Lorem ipsum dolor sit</h4>
                         </div>
-                        <button class="btn icon-btn btn-sm"><i class="fa fa-angle-up"></i></button>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
                     </div>
                     <div class="card-body hidden">
                         <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
@@ -86,7 +85,150 @@
                             <input type="checkbox" name="checkbox">
                             <h4 class="card-title">Lorem ipsum dolor sit</h4>
                         </div>
-                        <button class="btn icon-btn btn-sm"><i class="fa fa-angle-up"></i></button>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                    </div>
+                    <div class="card-body">
+                        <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div>
+                            <input type="checkbox" name="checkbox">
+                            <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                        </div>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
                     </div>
                     <div class="card-body">
                         <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
@@ -98,6 +240,13 @@
     </main>
 
     <div id="sidebar" class="sidebar">
+        <ul class="list mobile-only">
+            <li class="list-item">
+                <span class="list-icon">
+                    <i class="fa fa-th" aria-hidden="true"></i></span>
+                Dashboard
+            </li>
+        </ul>
         <div class="sidebar-title">
             <i class="fa fa-tasks" aria-hidden="true"></i>
             Collections
