adding card toggle button behavior

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <input type="checkbox" name="checkbox">
                             <h4 class="card-title">Lorem ipsum dolor sit</h4>
                         </div>
-                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-up"></i></button>
+                        <button class="btn icon-btn btn-sm card-toggle-btn"><i class="fa fa-angle-down"></i></button>
                     </div>
                     <div class="card-body hidden">
                         <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> Wednesday, Dec 10</span>
