Adding Collection.html and working on collection cards design

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <i class="fa fa-th pink"></i>
                     <span>Dashboard</span>
                 </a>
-                <a class="btn btn-md desktop-only">
+                <a href="./collections.html" class="btn btn-md desktop-only">
                     <i class="fa fa-tasks" aria-hidden="true"></i>
                     Collections
                 </a>
@@ -97,7 +97,7 @@
         </section>
     </main>
 
-    <div id="sidebar" class="sidebar">
+    <div id="sidebar" class="sidebar hidden">
         <ul class="list mobile-only">
             <li class="list-item">
                 <span class="list-icon">
