adding new featuer tab contoller buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <h2 class="g-user">Mr. Alireza Mohseni</h2>
             </div>
 
+            <div class="tab">
+                <button class="btn btn-md active">All Collections</button>
+                <button class="btn btn-md btn-outline">Favorites</button>
+            </div>
+
             <div class="content-body">
                 <h4>Tasks - 6</h4>
                 <div class="card">
