--- a/collections.html
+++ b/collections.html
@@ -46,6 +46,11 @@
                 </button>
             </div>
 
+            <div class="tab">
+                <button class="btn btn-md active">All Collections</button>
+                <button class="btn btn-md btn-outline">Favorites</button>
+            </div>
+
             <div class="content-body">
                 <a href="#" class="card">
                     <div class="card-header">
