and new feautre for adding new collection

--- a/collections.html
+++ b/collections.html
@@ -141,26 +141,7 @@
                     </div>
                 </a>
                 <a href="#" class="card card-empty">
-                    <div class="card-header">
-                        <div class="card-icon">
-                            <i class="fa fa-home"></i>
-                        </div>
-                        <div class="cart-action">
-                            <button class="btn icon-btn btn-sm card-option-btn">
-                                <i class="fa fa-ellipsis-v"></i>
-                            </button>
-                            <div class="card-options hidden">
-                                <ul class="list">
-                                    <li class="list-item">Add to Favorite</li>
-                                    <li class="list-item delete">Delete</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title">Design</h1>
-                        <p class="card-task">1/2 Done</p>
-                    </div>
+                    <i class="fa fa-plus">+</i>
                 </a>
             </div>
         </section>
