adding new feature back button

--- a/collections.html
+++ b/collections.html
@@ -40,7 +40,12 @@
     <main class="container">
         <section class="content">
             <div class="content-header">
-                <h2>Collections</h2>
+                <div class="center">
+                    <button class="btn btn-sm active">
+                        <i class="fa fa-arrow-left"></i>
+                    </button>
+                    <h2>Collections</h2>
+                </div>
                 <button class="btn icon-btn btn-sm">
                     <i class="fa fa-ellipsis-v"></i>
                 </button>
