--- a/collections.html
+++ b/collections.html
@@ -79,7 +79,7 @@
                         <p class="card-task">6/10 Done</p>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./design.html" class="card">
                     <div class="card-header">
                         <div class="card-icon">
                             <i class="fa fa-arrow-right"></i>
