--- a/design.html
+++ b/design.html
@@ -30,9 +30,18 @@
                 <button class="btn icon-btn btn-md">
                     <i class="fa fa-plus pink"></i>
                 </button>
-                <button class="btn icon-btn btn-md avatar">
+                <button id="avatar-btn" class="btn icon-btn btn-md avatar-action-btn">
                     <i class="fa fa-user-circle"></i>
                 </button>
+                <div class="toggle-container hidden" id="avatar-menu">
+                    <div class="toggle-options">
+                        <ul class="list">
+                            <li class="list-item">Profile</li>
+                            <li class="list-item">Sign-up</li>
+                            <li class="list-item">Sign-in</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
